<resources>
    <string name="app_name">FS90Controller</string>

    // Button lables
    <string name="send">send</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    // angle text
    <string name="label_angle">Angle(5° - 175°):</string>
    <string name="hint_angle">5 – 175</string>

    // dutyCycle text
    <string name="label_dutyCycle">DutyCycle(110 ~ 495):</string>
    <string name="hint_dutyCycle">110 ~ 495</string>

    // 3dof fragment text
    <string name="x">x:</string>
    <string name="y">y:</string>
    <string name="z">z:</string>

    <string name="ble_not_supported">BLE not supported</string>
</resources>